# vrc-ytdlp

./: Cargo.toml  config.json  install.bat  uninstall.bat
.github/workflows/: rust_build.yml  rust_release.yml
src/: args.rs  config.rs  constants.rs  downloader.rs  error.rs  executor.rs  lib.rs  logger.rs  main.rs  models.rs
