[package]
name = "yt-dlp-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Kai"]
description = "A proxy application for yt-dlp with automatic updates and argument filtering"
repository = ""
license = "MIT"
keywords = ["yt-dlp"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "yt-dlp-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
