[package]
name = "vrc-ytdlp"
version = "0.1.5"
edition = "2021"
authors = ["Kai"]
description = "Proxy requests from VRC to YtDlp"
repository = ""
license = "MIT"
keywords = ["yt-dlp"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "vrc-ytdlp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
sysinfo = { version = "0.30" }
